--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ZoomFoods">
         <activity
-            android:name=".Dashboard"
+            android:name=".DisplayProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Profile"
+            android:name=".DashboardActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".CreateProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Registration"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".Calendar"
+            android:name=".RegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CalendarView"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
