--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ZoomFoods">
+        <activity
+            android:name=".utils.ReminderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".utils.WaterAdd"
+            android:exported="false" />
+        <activity
+            android:name=".utils.ActivityWater"
+            android:exported="false" />
         <activity
             android:name=".DisplayProfileActivity"
             android:exported="false" />
