--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ZoomFoods">
         <activity
-            android:name=".utils.ReminderActivity"
+            android:name=".ReminderActivity"
+            android:parentActivityName=".ActivityWater"
             android:exported="false" />
         <activity
-            android:name=".utils.WaterAdd"
+            android:name=".WaterAdd"
+            android:parentActivityName=".ActivityWater"
             android:exported="false" />
         <activity
-            android:name=".utils.ActivityWater"
+            android:name=".ActivityWater"
+            android:parentActivityName=".DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".DisplayProfileActivity"
@@ -55,6 +58,14 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <receiver android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
